<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.headphonespace.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_profile"
        android:name="com.example.headphonespace.ui.profile.ProfileFragment"
        android:label="@string/menu_profile"
        tools:layout="@layout/fragment_profile" />

    <fragment
        android:id="@+id/nav_search"
        android:name="com.example.headphonespace.ui.search.SearchFragment"
        android:label="@string/menu_search"
        tools:layout="@layout/fragment_search" />

    <fragment
        android:id="@+id/nav_wishlist"
        android:name="com.example.headphonespace.ui.wishlist.WishlistFragment"
        android:label="@string/menu_wishlist"
        tools:layout="@layout/fragment_wishlist" />

    <fragment
        android:id="@+id/nav_popular"
        android:name="com.example.headphonespace.ui.popular.PopularFragment"
        android:label="@string/menu_popular"
        tools:layout="@layout/fragment_popular" />

    <fragment
        android:id="@+id/nav_headphone"
        android:name="com.example.headphonespace.Fragments.HeadphoneFragment"
        android:label="@string/headphone_string"
        tools:layout="@layout/fragment_headphone" />

</navigation>