<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.ProfileFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/profile_LL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true">
        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/profile_IMG_image"
            android:layout_width="250dp"
            android:layout_height="250dp"
            android:layout_gravity="center_horizontal"
            android:layout_margin="@dimen/default_margin"
            tools:srcCompat="@tools:sample/avatars" />

        <TextView
            android:id="@+id/profile_LBL_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_margin" />

        <TextView
            android:id="@+id/profile_LBL_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/e_mail"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_margin" />

        <TextView
            android:id="@+id/profile_LBL_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/phone"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="@dimen/default_margin" />

        <TextView
            android:id="@+id/profile_LBL_wishlist"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/profile_wishlist"
            android:textStyle="bold"
            android:layout_gravity="center_horizontal"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/profile_BTN_out"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/sign_out"
            android:textSize="11sp"
            />

    </androidx.appcompat.widget.LinearLayoutCompat>
    <TextView
        android:id="@+id/profile_LBL_review"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/default_margin"
        android:layout_marginTop="@dimen/default_margin"
        android:text="@string/profile_string_review"
        android:textStyle="bold"
        android:textSize="16sp"
        android:layout_below="@id/profile_LL"/>
    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/default_margin"
        android:orientation="vertical"
        android:layout_below="@id/profile_LBL_review">
        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/profile_LST_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            tools:listitem="@layout/review_headphone_item"/>
    </androidx.appcompat.widget.LinearLayoutCompat>


</RelativeLayout>